# kapfinance

./: .gitignore  LICENSE  README.md  kapfinance-gh-logo-light  pyproject.toml  requirements.txt  setup.py
kapfinance/: __init__.py  financial_data_manager.py  kapfinance.py
tests/: test_basic.py
